// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading renders in disabled state 1`] = `
<div
  class="styled__Wrapper-sc-1pom3vg-0 fGbevz"
  disabled=""
  size="16"
/>
`;

exports[`Loading renders with contrast color 1`] = `
<div
  class="styled__Wrapper-sc-1pom3vg-0 hYLaup"
  size="16"
/>
`;

exports[`Loading renders with custom size 1`] = `
<div
  class="styled__Wrapper-sc-1pom3vg-0 jOwmlb"
  size="32"
/>
`;

exports[`Loading renders with default props 1`] = `
<div
  class="styled__Wrapper-sc-1pom3vg-0 kNmpvj"
  size="16"
/>
`;

exports[`Loading renders with multiple custom props 1`] = `
<div
  class="styled__Wrapper-sc-1pom3vg-0 kxoJVd"
  disabled=""
  size="40"
/>
`;

exports[`Loading renders with secondary color 1`] = `
<div
  class="styled__Wrapper-sc-1pom3vg-0 kzVTip"
  size="16"
/>
`;
